Refactor v6
